commit: envio de datos y creación de .csv